# django_image_downloader

./: .gitignore  pyproject.toml  requirements.txt
core/: settings.py  urls.py
imghunt/: apps.py  scraper.py  urls.py  views.py
imghunt/static/imghunt/: script.js  styles.css
imghunt/templates/imghunt/: index.html  layout.html  success.html
